# quietrebellion

./: .gitignore  LICENSE  NOTES.md  README.md
.github/: release-notes.md
.github/workflows/: release-android.yml  release-windows.yml  release.yml
android/: README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
android/app/fastlane/metadata/android/en-US/changelogs/: 1.txt  2.txt  3.txt  4.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  rfcomm.c
android/app/src/main/kotlin/net/quietrebellion/: BluetoothTransport.kt  BmapProtocol.kt  BoseConnection.kt  DeviceDiscovery.kt  QcUltra2.kt  (+4 more)
android/app/src/main/res/drawable/: ic_headphones.xml  ic_moon.xml  ic_notification.xml  ic_palette.xml  ic_sun.xml
android/app/src/main/res/font/: dm_mono.xml  dm_sans.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml  type.xml
android/app/src/main/res/values-night/: colors.xml
csharp/: README.md
csharp/BoseCtl/: BmapIcons.cs  BmapProtocol.cs  BoseConnection.cs  BoseCtl.csproj  DeviceDiscovery.cs  Program.cs  QcUltraFeatures.cs  RfcommTransport.cs  TrayApp.cs  WinsockRfcommTransport.cs
docs/: architecture.md
python/pybmap/: catalog.py
